--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,186 +1,147 @@
 <html>
-
 <head>
-    <title>data crow cataloguer</title>
-	<link href="datacrow.css" rel="stylesheet" type="text/css">
-	<meta name="description" content="Video, Music, Book, Image and Software cataloguer. Parses file information and uses internet services to automatically retrieve information.">
-	<meta name="keywords" content="cataloguer,cataloger,cataloging,collection,collections,books,movies,software,games,organiser,organising,organizer,organizing,mp3,ogg,divx,xvid,database">
-
-
-
-
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>DataCrow - Home</title>
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="css/menu.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-
-	<!-- cataloguer,cataloger,cataloging,collection,collections,books,movies,software,games,organiser,organising,organizer,organizing,mp3,ogg,divx,xvid,database -->
-
-	<div id="top" style="position: absolute; left: 15%; top: 0px; width: 70%; height: 200px; background-color: Black;">
-	<img src="images/weblogo.jpg" alt="Data Crow cataloguer software logo" border="0">
-		<div align="right" style="position:absolute;right:5px;top:5px;background-color: Black;">
-			<a href="http://sourceforge.net" target="information"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a> <br />
-			<a href="http://sourceforge.net/donate/index.php?group_id=84631" target="information"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /></a>
-		</div>
-	</div>
-
-	<div id="menu" style="position:absolute;top:200px;left:15%;width:70%;height:30px;">
-		<center>
-			<table>
-			<tr>
-                <td><a href="index.html">Home</a></td>
-                <td> | </td>
-                <td><a href="donate.html">Donate</a></td>
-                <td> | </td>
-                <td><a href="download.html">Download</a></td>
-                <td> | </td>
-                <td><a href="screenshots.html">Screenshots</a></td>
-                <td> | </td>
-                <td><a href="faq.html">FAQ</a></td>
-                <td> | </td>
-                <td><a href="history.html">History</a></td>
-                <td> | </td>
-                <td><a href="links.html">Links</a></td>
-                <td> | </td>
-                <td><a href="news.html">News</a></td>
-                <td> | </td>
-                <td><a href="contact.html">Contact</a></td>
-                <td> | </td>
-                <td><a href="reviews.html">Reviews</a></td>
-			</tr>
-			</table>
-		</center>
-	</div>
-
-	<div class="information">
-		<h1>Data Crow</h1>
-		<p>
-		Data Crow is the <b>ultimate cataloguer</b> (or cataloger) and media organiser.
-		Always wanted to manage all your collections in one product? You want a product you can customize to
-		your needs? Your search ends here! Using Data Crow allows you to create a huge database containing all
-		your collected items. You can use the excellent online services to retrieve the information instead of
-		typing all the information yourself.<br />
-		Don't strain yourself in organizing your items and trying to keep track of their location, start using
-		the best cataloging software today. Start using Data Crow.
-		</p>
-
-		<li>Out of the box experience</li>
-		<li>Audio, software, book, movie and photo collections organizer</li>
-		<li>Customizable UI: select a skin, change the fonts, customize views and much more</td></tr></li>
-		<li>Create your own module from within Data Crow!</li>
-        <li>Optional web module; web interface + integrated web server</li>
-		<li>Everything in Data Crow can be modified to your own needs! Add your own categories, genres, states, ..</li>
-		<li>Rename your files based on the item information in Data Crow</li>
-		<li>Advanced user management</li>
-		<li>Keep track of loaned items using the simple loan management system</li>
-		<li>Use online services like Amazon.com, Imdb.com, Musicbrainz.org, and many others, to retrieve information</li>
-		<li>The internal powerful <a href="http://rsb.info.nih.gov/ij/">image editor</a> enables you to manipulate any image</li>
-		<li>Create pdf and html reports. Create your own reports by supplying new XSLT documents</li>
-		<li>Use templates to fill your default values</li>
-		<li>Mass update your items</li>
-		<li>Auto number your items using the auto numbering functionality</li>
-		<li>Create a backup of your items and settings by using the "backup & restore" functionality</li>
-		<li>Easily upgrade to newer versions of Data Crow</li>
-
-
-		<p>
-		Data Crow is 100% free and 100% free of ads, viruses and spyware. <br /><br />
-		Data Crow runs on any system where <a href="http://www.java.sun.com">Java</a> is installed.
-		</p>
-
-		<br />
-
-		<h1>Media Cataloguer</h1>
-		<p>
-		Data Crow is the cataloguer for software, movies, music, books and images. Any media type such as
-		mp3, divx, xvid, ape, ogg, pdf, avi can be imported within Data Crow and further enriched using online services.
-		</p>
-
-		<center>
-		<table  border="0" width="80%" cellpadding="10">
-			<tr><td><img src="images/software.jpg" alt="" border="0" align="top"></td>
-				<td>
-					<h1>Software</h1>
-					<p>
-					Use online services such as Amazon.com to find information on your software and games.
-					Retrieved information includes an in depth description of the software itself,
-					information on who developed and who published the software, the release date, the platform
-					on which the software runs, covers and screenshots and the average rating. <br />
-					<br />
-					The information can easily be retrieved and personalised. Besides the internet information you can enter
-					extra information like software type and location. And much more!
-					</p>
-				</td>
-			</tr>
-		</table>
-		</center>
-
-		<table  border="0" width="80%" cellpadding="10">
-			<tr><td>
-					<h2>Music</h2>
-					<p>
-					Data Crow contains two separate modules for cataloging music collections,
-					the Music Album and Audio CD module. Use one of the online services (MusicBrainz, Amazon, Discogs and others) to find information on your CD and or music files. Parse information from your mp3,
-					flac, ape and or ogg file and fill missing information using an online service. <br />
-					You can even play the music file from within Data Crow using your favorite audio player!
-					</p>
-				</td>
-				<td><img src="images/music.jpg" alt="" border="0" align="top"></td>
-			</tr>
-		</table>
-
-		<center>
-		<table  border="0" width="80%" cellpadding="10">
-			<tr><td><img src="images/books.jpg" alt="" border="0" align="top"></td>
-
-				<td><h2>Books</h2>
-					<p>
-					Search for your titles by using one of the online services such as Amazon.com, Bol.com,
-					Barnesandnoble.com. Data Crow retrieves descriptions, information about the author, year of release,
-					average user rating, a front cover picture and more! Just like with all the other modules
-					you can easily retrieve and change this information.<br/>
-					The information can be exported to a pdf or html file for nice print-outs
-					</p>
-				</td>
-			</tr>
-		</table>
-		</center>
-
-		<table  border="0" width="80%" cellpadding="10">
-			<tr>
-				<td><h2>Movies</h2>
-					<p>
-					The Imdb database is perhaps one of the largest and most reliable sources for movie descriptions
-					available on the web. Data Crow uses this gigantic database and others to retrieve information on the
-					movies you own. <br />
-					Information retrieved includes the cast, director, the country in which the movie was
-					made, year of release, language, certification, a rating and much more. <br />
-					Data Crow is capable of extracting information from all the common movie file formats (divx and such).
-					Information on codecs, resolution and other technical information is imported into Data Crow.
-					</p>
-				</td>
-
-				<td><img src="images/movies.jpg" alt="" border="0" align="top"></td>
-			</tr>
-
-		</table>
-
-		<center>
-		<table  border="0" width="80%" cellpadding="10">
-			<tr>
-				<td><img src="images/images.jpg" alt="" border="0" align="top" width="118" height="110"></td>
-
-				<td><h2>Images</h2>
-					<p>
-					Keep track of your images. Be they JPEG, GIF or PNG files, Data Crow will read the information
-					stored within these images. Data Crow can extract the date on which the image was created, technical information
-					such as compression, height and width and which (if applicable) camera was used to take the photograph.
-					To easily retrieve your images you can add a description and a name to each image.
-					Beside this information you categorize the images and assign (definable) states.
-					</p>
-				</td>
-			</tr>
-		</table>
-		</center>
-
-	</div>
+<body bgcolor="<li/>000000" marginwidth="0" marginheight="0" leftmargin="0" rightmargin="0" topmargin="0" bottommargin="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
+    <td width="800" height="200" align="center" valign="top" background="pics/HOME_header.jpg" onClick=window.top.location.href='index.html' style="cursor:pointer"></td>
+    <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="20" valign="top" style="background-image: url('pics/HOME_menu.jpg'); background-color: black;"><table width="800" border="0" cellspacing="0" cellpadding="0">
+  <tr height="16">
+    <td width="80" class="menu1o">Home</td>
+    <td width="80" class="menu2" onClick=window.top.location.href='donate.html' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Donate</td>
+    <td width="80" class="menu3" onClick=window.top.location.href='download.html' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Download</td>
+    <td width="80" class="menu4" onClick=window.top.location.href='screenshots.html' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Screenshots</td>
+    <td width="80" class="menu5" onClick=window.top.location.href='faq.html' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>FAQ</td>
+    <td width="80" class="menu6" onClick=window.top.location.href='history.html' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>History</td>
+    <td width="80" class="menu7" onClick=window.top.location.href='links.html' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Links</td>
+    <td width="80" class="menu8" onClick=window.top.location.href='news.html' onmouseover=this.className='menu8o' onMouseOut=this.className='menu8'>News</td>
+    <td width="80" class="menu9" onClick=window.top.location.href='contact.html' onmouseover=this.className='menu9o' onMouseOut=this.className='menu9'>Contact</td>
+    <td width="80" class="menu10" onClick=window.top.location.href='reviews.html' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Reviews</td>
+  </tr>
+  <tr height="4">
+    <td class="menu1o"></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+    </table>
+</td>
+  </tr>
+  <tr>
+    <td class="bg1"><table width="800" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="20" height="20"></td>
+    <td width="550"></td>
+    <td width="20"></td>
+    <td></td>
+    <td width="20"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td rowspan="3" valign="top" class="content_main"><span class="content_main_bold">Data Crow</span><br><br>
+      Data Crow is the <strong>ultimate cataloguer</strong> (or cataloger) and media organiser. Always wanted to manage all your collections in one product? You want a product you can customize to your needs? Your search ends here! Using Data Crow allows you to create a huge database containing all your collected items. You can use the excellent online services to retrieve the information instead of typing all the information yourself.<br>
+Don't strain yourself in organizing your items and trying to keep track of their location, start using  		the best cataloging software today. Start using Data Crow. <br><br>
+<li/> Out of the box experience
+<li/> Audio, software, book, movie and photo collections organizer
+<li/> Customizable UI: select a skin, change the fonts, customize views and much more
+<li/> Create your own module from within Data Crow!
+<li/> Optional web module; web interface + integrated web server
+<li/> Everything in Data Crow can be modified to your own needs!
+<li/> Add your own categories, genres, states, ..
+<li/> Rename your files based on the item information in Data Crow
+<li/> Advanced user management
+<li/> Keep track of loaned items using the simple loan management system
+<li/> Use online services like Amazon.com, Imdb.com, Musicbrainz.org, and many others...
+<li/> The internal powerful image editor enables you to manipulate any image
+<li/> Create pdf and html reports. Create your own reports by supplying new XSLT documents
+<li/> Use templates to fill your default values
+<li/> Mass update your items
+<li/> Auto number your items using the auto numbering functionality
+<li/> Create a backup of your items and settings by using the "backup & restore" functionality
+<li/> Easily upgrade to newer versions of Data Crow
+<br><br>
+Data Crow is 100% free and 100% free of ads, viruses and spyware.
+<br>
+Data Crow runs on any system where Java is installed.
+<br><br></td>
+    <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+    <td valign="top" class="content_main"><span class="content_main_bold">Latest news</span><br>
+      <br>
+      <span class="content_main_bold">02/01/2009<br>3.4.6 has been released</span><br>
+Due to the overwhelming response and complaints about having to set the DATACROW_HOME directory or to supply the -dir: parameter I have decided to change this with this early release. Oh, and there's something new as well; a French translation! Big thanks to Pierre-Yves DANTEC! </td>
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td height="20" style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td valign="top" class="content_main"><span class="content_main_bold">Quick link:</span><br><br>
+    <table width="100%" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td colspan="3" class="menu1o">Full version</td>
+    </tr>
+  <tr>
+    <td class="menu2" onClick=window.top.location.href='install.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='install.msi' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='winstall.msi' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+  </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu8o">Web module</td>
+    </tr>
+  <tr>
+    <td class="menu7" onClick=window.top.location.href='install.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
+    <td class="menu6" onClick=window.top.location.href='install.msi' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
+    <td class="menu5" onClick=window.top.location.href='winstall.msi' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+  </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='souce.code' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+  </tr>
+  <tr>
+    <td colspan="3" class="menu9" onClick=window.top.location.href='download.html' onmouseover=this.className='menu9o' onMouseOut=this.className='menu9'>Go to Download page</td>
+  </tr>
+    </table>
+    </td>
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td height="20"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+</table></td>
+  </tr>
+  <tr>
+    <td height="65" background="pics/HOME_footer.jpg"></td>
+  </tr>
+</table>
 </body>
+</html>
