--- a/homepage/download.html
+++ b/homepage/download.html
@@ -1,92 +1,52 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-    <title>data crow -download-</title>
-    <link href="datacrow.css" rel="stylesheet" type="text/css">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>DataCrow - Download</title>
+<link href="css/main.css" rel="stylesheet" type="text/css" />
+<link href="css/menu.css" rel="stylesheet" type="text/css" />
 </head>
-
-<body>
-
-	<!-- cataloguer,cataloger,cataloging,collection,collections,books,movies,software,games,organiser,organising,organizer,organizing,mp3,ogg,divx,xvid,database -->
-
-	<div id="top" style="position: absolute; left: 15%; top: 0px; width: 70%; height: 200px; background-color: Black;">
-	<img src="images/weblogo.jpg" alt="Data Crow cataloguer software logo" border="0">
-		<div align="right" style="position:absolute;right:5px;top:5px;background-color: Black;">
-			<a href="http://sourceforge.net" target="information"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a> <br />
-			<a href="http://sourceforge.net/donate/index.php?group_id=84631" target="information"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /></a>
-		</div>
-	</div>
-
-	<div id="menu" style="position:absolute;top:200px;left:15%;width:70%;height:30px;">
-		<center>
-			<table>
-			<tr>
-                <td><a href="index.html">Home</a></td>
-                <td> | </td>
-                <td><a href="donate.html">Donate</a></td>
-                <td> | </td>
-                <td><a href="download.html">Download</a></td>
-                <td> | </td>
-                <td><a href="screenshots.html">Screenshots</a></td>
-                <td> | </td>
-                <td><a href="faq.html">FAQ</a></td>
-                <td> | </td>
-                <td><a href="history.html">History</a></td>
-                <td> | </td>
-                <td><a href="links.html">Links</a></td>
-                <td> | </td>
-                <td><a href="news.html">News</a></td>
-                <td> | </td>
-                <td><a href="contact.html">Contact</a></td>
-                <td> | </td>
-                <td><a href="reviews.html">Reviews</a></td>
-			</tr>
-			</table>
-		</center>
-	</div>
-
-
-	<div class="information">
-
-		<h1>Download</h1>
-
-		<p>
-		The Data Crow cataloguer software is hosted on Sourceforge.net, all files can be downloaded from there. Below you find direct links to the latest releases.
-		Make sure you are downloading the version you want; Beta releases are untested and might thus be unstable. The production releases have been tested
-		and verified to be working correctly. I do encourage people downloading and looking at the beta versions as long
-		as the beta product is run on a backup of the existing database or on a new database.
-		</p>
-
-		<h2>Production version</h2>
-
-        <li>Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip" target="information">3.4.7</a></li>
-        <li>Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip" target="information">3.4.7</a></li>
-        <li>Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe" target="information">3.4.7</a></li>
-        <li>Source code: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip" target="information">3.4.7</a></li>
-        <li>Web module: Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip" target="information">1.2</a></li>
-        <li>Web module: Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip" target="information">1.2</a></li>
-        <li>Web module: Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe" target="information">1.2</a></li>
-
-
-        <h2>Upgrading</h2>
-        <p>
-        When upgrading from older versions you will have to follow the upgrade paths:<br />
-        Versions older then the 2.12 version should be upgraded to the 2.12 version first.<br />
-        Version 2.12 should first be upgraded to the 3.0 version.<br />
-        Version 3.0 beta or alpha should first be upgraded to the 3.0 production version.<br />
-        Version 3.0 can be upgraded to the latest version.<br />
-        To download older versions click on <a href="http://sourceforge.net/project/showfiles.php?group_id=84631&package_id=87383" target="new">this link</a> (opens in a new window).
-        </p>
-
-
-		<h2>Documentation</h2>
-		<p>
-		Data Crow has an internal help system. However for some functionality the internal help is simply not enough. For these topics separate manuals have been created.
-		</p>
-
-		<li>How to create your own modules: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_modules.pdf" target="information">PDF</a></li>
-		<li>How to create your own report: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_a_report.pdf" target="information">PDF</a></li>
-
-	</div>
+<body bgcolor="#000000" marginwidth="0" marginheight="0" leftmargin="0" rightmargin="0" topmargin="0" bottommargin="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
+    <td width="800" height="200" align="center" valign="top" background="pics/DOWNLOAD_header.jpg" onClick=window.top.location.href='index.html' style="cursor:pointer"></td>
+    <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="20" valign="top" style="background-image: url('pics/DOWNLOAD_menu.jpg'); background-color: black;"><table width="800" border="0" cellspacing="0" cellpadding="0">
+  <tr height="16">
+    <td width="80" class="menu1" onClick=window.top.location.href='index.html' onmouseover=this.className='menu1o' onMouseOut=this.className='menu1'>Home</td>
+    <td width="80" class="menu2" onClick=window.top.location.href='donate.html' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Donate</td>
+    <td width="80" class="menu3o">Download</td>
+    <td width="80" class="menu4" onClick=window.top.location.href='screenshots.html' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Screenshots</td>
+    <td width="80" class="menu5" onClick=window.top.location.href='faq.html' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>FAQ</td>
+    <td width="80" class="menu6" onClick=window.top.location.href='history.html' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>History</td>
+    <td width="80" class="menu7" onClick=window.top.location.href='links.html' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Links</td>
+    <td width="80" class="menu8" onClick=window.top.location.href='news.html' onmouseover=this.className='menu8o' onMouseOut=this.className='menu8'>News</td>
+    <td width="80" class="menu9" onClick=window.top.location.href='contact.html' onmouseover=this.className='menu9o' onMouseOut=this.className='menu9'>Contact</td>
+    <td width="80" class="menu10" onClick=window.top.location.href='reviews.html' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Reviews</td>
+  </tr>
+  <tr height="4">
+    <td></td>
+    <td></td>
+    <td class="menu3o"></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+    </table>
+</td>
+  </tr>
+  <tr>
+    <td class="bg3" ><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></td>
+  </tr>
+  <tr>
+    <td height="65" background="pics/DOWNLOAD_footer.jpg"></td>
+  </tr>
+</table>
 </body>
 </html>
