--- a/homepage/screenshots.html
+++ b/homepage/screenshots.html
@@ -1,110 +1,52 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
 <html>
 <head>
-    <title>data crow -screenshots-</title>
-    <link href="datacrow.css" rel="stylesheet" type="text/css">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>DataCrow - Screenshots</title>
+<link href="css/main.css" rel="stylesheet" type="text/css" />
+<link href="css/menu.css" rel="stylesheet" type="text/css" />
 </head>
-
-<body>
-
-	<!-- cataloguer,cataloger,cataloging,collection,collections,books,movies,software,games,organiser,organising,organizer,organizing,mp3,ogg,divx,xvid,database -->
-
-	<div id="top" style="position: absolute; left: 15%; top: 0px; width: 70%; height: 200px; background-color: Black;">
-
-	<img src="images/weblogo.jpg" alt="Data Crow cataloguer software logo" border="0">
-		<div align="right" style="position:absolute;right:5px;top:5px;background-color: Black;">
-			<a href="http://sourceforge.net" target="information"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a> <br />
-			<a href="http://sourceforge.net/donate/index.php?group_id=84631" target="information"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /></a>
-		</div>
-	</div>
-
-	<div id="menu" style="position:absolute;top:200px;left:15%;width:70%;height:30px;">
-		<center>
-			<table>
-			<tr>
-                <td><a href="index.html">Home</a></td>
-                <td> | </td>
-                <td><a href="donate.html">Donate</a></td>
-                <td> | </td>
-                <td><a href="download.html">Download</a></td>
-                <td> | </td>
-                <td><a href="screenshots.html">Screenshots</a></td>
-                <td> | </td>
-                <td><a href="faq.html">FAQ</a></td>
-                <td> | </td>
-                <td><a href="history.html">History</a></td>
-                <td> | </td>
-                <td><a href="links.html">Links</a></td>
-                <td> | </td>
-                <td><a href="news.html">News</a></td>
-                <td> | </td>
-                <td><a href="contact.html">Contact</a></td>
-                <td> | </td>
-                <td><a href="reviews.html">Reviews</a></td>
-			</tr>
-			</table>
-		</center>
-	</div>
-
-
-	<div class="information">
-
-		<br />
-
-		<center>
-			<table>
-				<tr><td>
-				<table align="center" cellspacing="1" cellpadding="1" border="0" bgcolor="#80FF00">
-					<tr>
-						<td><a href="images/screenshots/help.png" target="new"> <img src="images/screenshots/help_small.png" alt="Organiser,Organizer" width="197" height="169" border="0"></a></td>
-					</tr>
-				</table><br />
-			 </td>
-
-			 <td>
-				<table align="center" cellspacing="1" cellpadding="1" border="0" bgcolor="#80FF00"
-					<tr>
-						<td><a href="images/screenshots/itemform.png" target="new"><img src="images/screenshots/itemform_small.png" alt="Organize,Organise" width="130" height="162" border="0"></a></td>
-					</tr>
-				</table><br />
-			 </td></tr>
-
-			 <tr><td>
-				<table align="center" cellspacing="1" cellpadding="1" border="0" bgcolor="#80FF00"
-					<tr>
-						<td><a href="images/screenshots/mainscreen1.png" target="new"><img src="images/screenshots/mainscreen1_small.png" alt="Data Crow cataloger Mainscreen" width="250" height="193" border="0"></a></td>
-					</tr>
-				</table><br />
-			 </td>
-
-			 <td>
-				<table align="center" cellspacing="1" cellpadding="1" border="0" bgcolor="#80FF00"
-					<tr>
-						<td><a href="images/screenshots/mainscreen2.png" target="new"><img src="images/screenshots/mainscreen2_small.png" alt="Data Crow cataloguer Mainscreen" width="250" height="193" border="0"></a></td>
-					</tr>
-				</table><br />
-			 </td></tr>
-
-			 <tr>
-				 <td>
-					<table align="center" cellspacing="1" cellpadding="1" border="0" bgcolor="#80FF00"
-						<tr>
-							<td><a href="images/screenshots/mainscreen3.png" target="new"><img src="images/screenshots/mainscreen3_small.png" alt="Data Crow Cataloging Mainscreen" width="250" height="193" border="0"></a></td>
-						</tr>
-					</table><br />
-				 </td>
-				 <td>
-					<table align="center" cellspacing="1" cellpadding="1" border="0" bgcolor="#80FF00"
-						<tr>
-							<td><a href="images/screenshots/onlinesearch.png" target="new"><img src="images/screenshots/onlinesearch_small.png" alt="Data Crow Cataloguing Online Search Form" width="221" height="187" border="0"></a></td>
-						</tr>
-					</table>
-				 </td>
-			  </tr>
-			</tr>
-			</table>
-		</center>
-	</div>
+<body bgcolor="#000000" marginwidth="0" marginheight="0" leftmargin="0" rightmargin="0" topmargin="0" bottommargin="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
+    <td width="800" height="200" align="center" valign="top" background="pics/SCREENSHOTS_header.jpg" onClick=window.top.location.href='index.html' style="cursor:pointer"></td>
+    <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="20" valign="top" style="background-image: url('pics/SCREENSHOTS_menu.jpg'); background-color: black;"><table width="800" border="0" cellspacing="0" cellpadding="0">
+  <tr height="16">
+    <td width="80" class="menu1" onClick=window.top.location.href='index.html' onmouseover=this.className='menu1o' onMouseOut=this.className='menu1'>Home</td>
+    <td width="80" class="menu2" onClick=window.top.location.href='donate.html' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Donate</td>
+    <td width="80" class="menu3" onClick=window.top.location.href='download.html' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Download</td>
+    <td width="80" class="menu4o">Screenshots</td>
+    <td width="80" class="menu5" onClick=window.top.location.href='faq.html' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>FAQ</td>
+    <td width="80" class="menu6" onClick=window.top.location.href='history.html' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>History</td>
+    <td width="80" class="menu7" onClick=window.top.location.href='links.html' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Links</td>
+    <td width="80" class="menu8" onClick=window.top.location.href='news.html' onmouseover=this.className='menu8o' onMouseOut=this.className='menu8'>News</td>
+    <td width="80" class="menu9" onClick=window.top.location.href='contact.html' onmouseover=this.className='menu9o' onMouseOut=this.className='menu9'>Contact</td>
+    <td width="80" class="menu10" onClick=window.top.location.href='reviews.html' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Reviews</td>
+  </tr>
+  <tr height="4">
+    <td></td>
+    <td></td>
+    <td></td>
+    <td class="menu4o"></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+    </table>
+</td>
+  </tr>
+  <tr>
+    <td class="bg4"><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></td>
+  </tr>
+  <tr>
+    <td height="65" background="pics/SCREENSHOTS_footer.jpg"></td>
+  </tr>
+</table>
 </body>
 </html>
